--- a/src/template.html
+++ b/src/template.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "icon" type = "image/x-icon" href = "/resources/favicon.ico">
     <title>Make-All Do's</title>
 </head>
 <body>
